--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "Glycosylator"
 description = "Python framework for the identification, modeling, and modification of glycans in protein structure"
 version = "1.0.0"
 readme = "README.md"
-# license = {text = "ADDLICENSE"}
+license = "MIT"
 # authors = []
 dependencies = [
     "numpy",
